--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -79,6 +79,12 @@ The system offers also the possibility to receive suggestions in order to improv
 \item Work started on 13/11/19;
 \item Work finished on 9/12/19;
 \item Document delivered on 9/12/19.
+\item Document Modified (13/12/19):
+	\begin{itemize}
+	\item Overview changed a little to make it more consistent with the RASD.
+	\item Little changes in the Runtime View part in order to justify some choices.
+	\item Changes in ER diagram.
+	\end{itemize}
 \end{itemize}
 \subsection{Reference Documents}
 \begin{itemize}
@@ -555,10 +561,12 @@ The integrated system will have to be tested with black-box tests. This means th
 		 Chapter 4 (done in group) & 12 \\
 		 Chapter 5 & 5 \\
 		 Group review  & 7 \\
+		 Changes before 15/12 deadline in group & 1 \\
+
 		\hline
 		&  {\bf Total} \\
 		\hline
-		&  46.0 \\
+		&  47.0 \\
 		\hline
 		\caption{Luca Massini's effort}
 	\end{longtable}
@@ -577,10 +585,11 @@ The integrated system will have to be tested with black-box tests. This means th
 		 section 2.5 & 3 \\
 		 Chapter 4 (done in group)& 12 \\
 		 Group review & 7\\
+		 Changes before 15/12 deadline in group & 1 \\
 		\hline
 		&  {\bf Total} \\
 		\hline
-		&  48.5 \\
+		&  49.5 \\
 		\hline
 		\caption{Daniele Nicolò's effort}
 	\end{longtable}
