--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -193,6 +193,20 @@ This events are controlled by the external world.
 	\item Work started 13/10/19;
 	\item RASD completed on 8/11/19;
 	\item RASD delivered on 10/11/19.
+	\item RASD Modification after discussion with the Tutor (From 20/11/19 to 13/12/19):
+	\begin{itemize}
+	\item Goals and Scope modification in order to better comply with the IEEE standard.
+	\item Goal deleted for privacy reasons (with consequent changes in the rest of the document).
+	\item Product Perspective modification to make it more complete.
+	\item We deleted some useless user's attributes. Consequently, we modified also the alloy model to make it consistent with the changes.
+	\item We added more detailed information about localization in the class diagram.
+	\item We added some further information about disabled people to Domain Assumptions and User Characteristics.
+	\item We added some significant Domain Assumptions and Requirements and deleted other useless ones.
+	\item We deleted a useless mockup and done some changes to be consistent with the aforementioned modifications.
+	\item We added clear information about the OS in the Software Interfaces part.
+	\item We clarified the municipality sign-up in the Use Case 2.
+	\item We changed the Performance Requirements in order to comply with the IEEE standard.
+	\end{itemize}
 
 \end{itemize}
 
@@ -1339,8 +1353,9 @@ So it has to be programmed well, avoiding code duplication and using good design
 
 \subsubsection{Portability}
 
-The application is designed for IOS and Android, so it will have to be interchangeable from one OS to the other, preserving the accounts and the personal data.
-In the back-end part, it has to be designed in a way that it will be independent from the OS.
+The application is designed for IOS and Android.\\
+
+Furthermore, in the back-end part, it has to be designed in a way that it will be independent from the middleware and the programming language.
 
 
 \section{Formal analysis with alloy}
@@ -1422,10 +1437,13 @@ In this world we will show a complete view of the system in its completeness. Ev
 		 Scenarios & 3 \\
 		 Alloy & 15\\
 		 Chapter 4 review & 3\\
+		 
+		 Document Modification after the revision of the
+		 tutor and discussion with the tutor (Group Work) & 10 \\
 		\hline
 		&  {\bf Total} \\
 		\hline
-		&  47.5 \\
+		&  57.5 \\
 		\hline
 		\caption{Luca Massini's effort}
 	\end{longtable}
@@ -1450,10 +1468,12 @@ In this world we will show a complete view of the system in its completeness. Ev
 		 Section 3.2.5 & 3 \\
 		 Sections 3.3, 3.4, 3.5 & 1.5 \\
 		 Chapter 3 review & 2 \\
+		 Document Modification after the revision of the
+		 tutor and discussion with the tutor (Group Work) & 10 \\
 		\hline
 		&  {\bf Total} \\
 		\hline
-		&  46.5 \\
+		&  56.5 \\
 		\hline
 		\caption{Daniele Nicolò's effort}
 	\end{longtable}
