--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -1345,11 +1345,12 @@ The security is fundamental in our system, as it contains the users' sensitive d
 \item The passwords are hashed before being stored in the DB.
 \item The software has to be developed avoiding to use unknown or untrusted libraries, because trusted and well known libraries are less likely subject to be exploitable.
 \end{itemize}
+We also have a security policy for the passwords. The user must insert a password composed at least by 8 characters, at least a number and at least a capital letter.
 
 
 \subsubsection{Maintainability}
 The software will have to be developed in order to be maintained in future and, eventually, to add some new features.
-So it has to be programmed well, avoiding code duplication and using good design principles and design patterns.
+So it has to be programmed avoiding code duplication, writing readable code with a valid and understandable documentation.
 
 \subsubsection{Portability}
 
